@@ -7,6 +7,7 @@
 * Added the Add-Ons section.
 * Added the Notice class.
 * Added links to the documenation pages.
+* Added the Document Categories widget.
 
 = 1.4.1 =
 * WordPress 4.8 compatibility tested.
